PC-139 Target Java 11 and use its features; replace Guava where possible